stage/admin-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-depl
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: admin
          image: kavinduorg/stage-admin:089f1b434e
