stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stage-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb

    # Internet-facing ALB
    alb.ingress.kubernetes.io/scheme: internet-facing

    # ALB routes directly to Pod IPs
    alb.ingress.kubernetes.io/target-type: ip

    # Listen on HTTP and HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # ACM certificate for both domains
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:286093098549:certificate/b0e98b3d-7363-405f-9993-b87570b87ca1

    # Force HTTP → HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  rules:
    - host: stage.kavindu-gihan.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
    - host: stage-backend.kavindu-gihan.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 3000

    - host: stage-admin.kavindu-gihan.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-svc
                port:
                  number: 80
